Update doc and fix get container info response
